// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconOutline props exists 1`] = `
<
  style={
    Array [
      Object {
        "color": "red",
        "fontFamily": "antoutline",
        "fontSize": 24,
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      undefined,
    ]
  }
>
  
</>
`;

exports[`IconOutline should create Icon element. 1`] = `
<
  style={
    Array [
      Object {
        "color": "black",
        "fontFamily": "antoutline",
        "fontSize": 14,
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      undefined,
    ]
  }
>
  
</>
`;

exports[`IconOutline should create outlineGlyphMap 1`] = `
Object {
  "account-book": 57345,
  "alert": 57346,
  "alibaba": 57347,
  "align-center": 57348,
  "align-left": 57349,
  "align-right": 57350,
  "alipay": 57352,
  "alipay-circle": 57351,
  "aliwangwang": 57353,
  "aliyun": 57354,
  "amazon": 57355,
  "android": 57356,
  "ant-cloud": 57357,
  "ant-design": 57358,
  "apartment": 57359,
  "api": 57360,
  "apple": 57361,
  "appstore": 57362,
  "area-chart": 57363,
  "arrow-down": 57364,
  "arrow-left": 57365,
  "arrow-right": 57366,
  "arrow-up": 57367,
  "arrows-alt": 57368,
  "audio": 57369,
  "audit": 57370,
  "backward": 57371,
  "bank": 57372,
  "bar-chart": 57373,
  "barcode": 57374,
  "bars": 57375,
  "behance": 57377,
  "behance-square": 57376,
  "bell": 57378,
  "bg-colors": 57379,
  "block": 57380,
  "bold": 57381,
  "book": 57382,
  "border": 57391,
  "border-bottom": 57383,
  "border-horizontal": 57384,
  "border-inner": 57385,
  "border-left": 57386,
  "border-outer": 57387,
  "border-right": 57388,
  "border-top": 57389,
  "border-verticle": 57390,
  "box-plot": 57392,
  "branches": 57393,
  "build": 57394,
  "bulb": 57395,
  "calculator": 57396,
  "calendar": 57397,
  "camera": 57398,
  "car": 57399,
  "caret-down": 57400,
  "caret-left": 57401,
  "caret-right": 57402,
  "caret-up": 57403,
  "carry-out": 57404,
  "check": 57407,
  "check-circle": 57405,
  "check-square": 57406,
  "chrome": 57408,
  "ci": 57409,
  "clock-circle": 57410,
  "close": 57413,
  "close-circle": 57411,
  "close-square": 57412,
  "cloud": 57418,
  "cloud-download": 57414,
  "cloud-server": 57415,
  "cloud-sync": 57416,
  "cloud-upload": 57417,
  "cluster": 57419,
  "code": 57421,
  "code-sandbox": 57420,
  "codepen": 57423,
  "codepen-circle": 57422,
  "coffee": 57424,
  "colum-height": 57425,
  "column-width": 57426,
  "compass": 57427,
  "contacts": 57428,
  "container": 57429,
  "control": 57430,
  "copy": 57431,
  "copyright": 57432,
  "credit-card": 57433,
  "crown": 57434,
  "customer-service": 57435,
  "dash": 57436,
  "dashboard": 57437,
  "database": 57438,
  "delete": 57439,
  "deployment-unit": 57440,
  "desktop": 57441,
  "diff": 57442,
  "dingding": 57443,
  "disconnect": 57444,
  "dislike": 57445,
  "dollar": 57446,
  "dot-chart": 57447,
  "double-left": 57448,
  "double-right": 57449,
  "down": 57452,
  "down-circle": 57450,
  "down-square": 57451,
  "download": 57453,
  "drag": 57454,
  "dribbble": 57456,
  "dribbble-square": 57455,
  "dropbox": 57457,
  "edit": 57458,
  "ellipsis": 57459,
  "enter": 57460,
  "environment": 57461,
  "euro": 57462,
  "exception": 57463,
  "exclamation": 57465,
  "exclamation-circle": 57464,
  "experiment": 57466,
  "export": 57467,
  "eye": 57469,
  "eye-invisible": 57468,
  "facebook": 57470,
  "fall": 57471,
  "fast-backward": 57472,
  "fast-forward": 57473,
  "file": 57490,
  "file-add": 57474,
  "file-done": 57475,
  "file-excel": 57476,
  "file-exclamation": 57477,
  "file-image": 57478,
  "file-jpg": 57479,
  "file-markdown": 57480,
  "file-pdf": 57481,
  "file-ppt": 57482,
  "file-protect": 57483,
  "file-search": 57484,
  "file-sync": 57485,
  "file-text": 57486,
  "file-unknown": 57487,
  "file-word": 57488,
  "file-zip": 57489,
  "filter": 57491,
  "fire": 57492,
  "flag": 57493,
  "folder": 57496,
  "folder-add": 57494,
  "folder-open": 57495,
  "font-colors": 57497,
  "font-size": 57498,
  "fork": 57499,
  "form": 57500,
  "forward": 57501,
  "frown": 57502,
  "fullscreen": 57504,
  "fullscreen-exit": 57503,
  "fund": 57505,
  "funnel-plot": 57506,
  "gateway": 57507,
  "gift": 57508,
  "github": 57509,
  "gitlab": 57510,
  "global": 57511,
  "gold": 57512,
  "google": 57514,
  "google-plus": 57513,
  "hdd": 57515,
  "heart": 57516,
  "heat-map": 57517,
  "highlight": 57518,
  "home": 57519,
  "hourglass": 57520,
  "html5": 57521,
  "idcard": 57522,
  "ie": 57523,
  "import": 57524,
  "inbox": 57525,
  "info": 57527,
  "info-circle": 57526,
  "instagram": 57528,
  "insurance": 57529,
  "interation": 57530,
  "issues-close": 57531,
  "italic": 57532,
  "key": 57533,
  "laptop": 57534,
  "layout": 57535,
  "left": 57538,
  "left-circle": 57536,
  "left-square": 57537,
  "like": 57539,
  "line": 57542,
  "line-chart": 57540,
  "line-height": 57541,
  "link": 57543,
  "linkedin": 57544,
  "loading": 57546,
  "loading-3-quarters": 57545,
  "lock": 57547,
  "login": 57548,
  "logout": 57549,
  "mail": 57550,
  "man": 57551,
  "medicine-box": 57552,
  "medium": 57554,
  "medium-workmark": 57553,
  "meh": 57555,
  "menu": 57558,
  "menu-fold": 57556,
  "menu-unfold": 57557,
  "message": 57559,
  "minus": 57562,
  "minus-circle": 57560,
  "minus-square": 57561,
  "mobile": 57563,
  "money-collect": 57564,
  "monitor": 57565,
  "mr": 57566,
  "notification": 57567,
  "number": 57568,
  "ordered-list": 57569,
  "paper-clip": 57570,
  "pause": 57572,
  "pause-circle": 57571,
  "pay-circle": 57573,
  "percentage": 57574,
  "phone": 57575,
  "pic-center": 57576,
  "pic-left": 57577,
  "pic-right": 57578,
  "picture": 57579,
  "pie-chart": 57580,
  "play-circle": 57581,
  "play-square": 57582,
  "plus": 57585,
  "plus-circle": 57583,
  "plus-square": 57584,
  "pound": 57586,
  "poweroff": 57587,
  "printer": 57588,
  "profile": 57589,
  "project": 57590,
  "property-safety": 57591,
  "pushpin": 57592,
  "qq": 57593,
  "qrcode": 57594,
  "question": 57596,
  "question-circle": 57595,
  "radar-chart": 57597,
  "radius-bottomleft": 57598,
  "radius-bottomright": 57599,
  "radius-setting": 57600,
  "radius-upleft": 57601,
  "radius-upright": 57602,
  "read": 57603,
  "reconciliation": 57604,
  "red-envelope": 57605,
  "reddit": 57606,
  "redo": 57607,
  "reload": 57609,
  "reload-time": 57608,
  "rest": 57610,
  "retweet": 57611,
  "right": 57614,
  "right-circle": 57612,
  "right-square": 57613,
  "rise": 57615,
  "robot": 57616,
  "rocket": 57617,
  "rollback": 57618,
  "safety": 57620,
  "safety-certificate": 57619,
  "save": 57621,
  "scan": 57622,
  "schedule": 57623,
  "scissor": 57624,
  "search": 57625,
  "security-scan": 57626,
  "select": 57627,
  "setting": 57628,
  "shake": 57629,
  "share-alt": 57630,
  "shop": 57631,
  "shopping": 57633,
  "shopping-cart": 57632,
  "shrink": 57634,
  "sketch": 57635,
  "skin": 57636,
  "skype": 57637,
  "slack": 57639,
  "slack-square": 57638,
  "sliders": 57640,
  "small-dash": 57641,
  "smile": 57642,
  "snippets": 57643,
  "solution": 57644,
  "sort-ascending": 57645,
  "sort-descending": 57646,
  "sound": 57647,
  "star": 57648,
  "step-backward": 57649,
  "step-forward": 57650,
  "stock": 57651,
  "stop": 57652,
  "strikethrough": 57653,
  "swap": 57656,
  "swap-left": 57654,
  "swap-right": 57655,
  "switcher": 57657,
  "sync": 57658,
  "table": 57659,
  "tablet": 57660,
  "tag": 57661,
  "tags": 57662,
  "taobao": 57664,
  "taobao-circle": 57663,
  "team": 57665,
  "thunderbolt": 57666,
  "to-top": 57667,
  "tool": 57668,
  "trademark": 57669,
  "transaction": 57670,
  "trophy": 57671,
  "twitter": 57672,
  "underline": 57673,
  "undo": 57674,
  "unlock": 57675,
  "unordered-list": 57676,
  "up": 57679,
  "up-circle": 57677,
  "up-square": 57678,
  "upload": 57680,
  "usb": 57681,
  "user": 57684,
  "user-add": 57682,
  "user-delete": 57683,
  "usergroup-add": 57685,
  "usergroup-delete": 57686,
  "vertical-align-bottom": 57687,
  "vertical-align-middle": 57688,
  "vertical-align-top": 57689,
  "vertical-left": 57690,
  "vertical-right": 57691,
  "video-camera": 57692,
  "wallet": 57693,
  "warning": 57694,
  "wechat": 57695,
  "weibo": 57698,
  "weibo-circle": 57696,
  "weibo-square": 57697,
  "wifi": 57699,
  "windows": 57700,
  "woman": 57701,
  "yahoo": 57702,
  "youtube": 57703,
  "yuque": 57704,
  "zhihu": 57705,
  "zoom-in": 57706,
  "zoom-out": 57707,
}
`;
